--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <Button
         android:id="@+id/playButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Play"
+        android:layout_marginEnd="210dp"
         android:onClick="play"
+        android:text="Play"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/pauseButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/pauseButton" />
+
     <Button
         android:id="@+id/pauseButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Pause"
+        android:layout_marginEnd="210dp"
         android:onClick="pause"
+        android:text="Pause"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/playButton"
         app:layout_constraintRight_toLeftOf="@id/stopButton"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/stopButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Stop"
+        android:layout_marginStart="210dp"
         android:onClick="stop"
+        android:text="Stop"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/pauseButton"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
